修改文件: index.html

--- a/index.html
+++ b/index.html
@@ -2,3 +2,14 @@
 <p>欢迎来到我的所在。 </p>
 <p>希望你玩得开心</p>
 <p>天天天蓝也是很好的</p>
+# 这是一个测试链接  
+我也想*试试看*最后的样子会是什么  
+如果可行的话，**后面我就会这个网站进行更新**  
+___
+1.但是这个好用吗？  
+2. 似乎值得考虑。  
+- 引用又要怎么弄  
+>艾默生说过，没有互联网你拿什么赚钱？  
+说得真的很有道理  
+*谢谢，再见*  
+
