--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Striped by HTML5 UP</title>
+		<title>SXZ自己的园地</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -25,8 +25,8 @@
 									if they get too long. You can also remove the <p> entirely if you don't
 									need a subtitle.
 								-->
-								<h2><a href="#">Welcome to Striped</a></h2>
-								<p>A free, fully responsive HTML5 site template by HTML5 UP</p>
+								<h2><a href="#">首页文章</a></h2>
+								<p>记录个人想法以及其他</p>
 							</header>
 							<div class="info">
 								<!--
@@ -37,7 +37,7 @@
 									the entire "date" element.
 
 								-->
-								<span class="date"><span class="month">Jul<span>y</span></span> <span class="day">14</span><span class="year">, 2014</span></span>
+								<span class="date"><span class="month">Nov<span>y</span></span> <span class="day">7</span><span class="year">, 2022</span></span>
 								<!--
 									Note: You can change the number of list items in "stats" to whatever you want.
 								-->
@@ -50,25 +50,21 @@
 							</div>
 							<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 							<p>
-								<strong>Hello!</strong> You're looking at <strong>Striped</strong>, a fully responsive HTML5 site template designed by <a href="http://twitter.com/ajlkn">AJ</a>
-								for <a href="http://html5up.net">HTML5 UP</a> It features a clean, minimalistic design, styling for all basic page elements (including blockquotes, tables and lists), a
-								repositionable sidebar (left or right), and HTML5/CSS3 code designed for quick and easy customization (see code comments for details).
+								Hello! 我不知道你是出于什么目的访问了这个网站，但是我的确是希望有一方自己的园地——并且是不受审查的、也不会被删除的——用来记录自己的所思所想。
 							</p>
 							<p>
-								Striped is released for free under the <a href="http://html5up.net/license">Creative Commons Attribution license</a> so feel free to use it for personal projects
-								or even commercial ones &ndash; just be sure to credit <a href="http://html5up.net">HTML5 UP</a> for the design. If you like what you see here, be sure to check out
-								<a href="http://html5up.net">HTML5 UP</a> for more cool designs or follow me on <a href="http://twitter.com/ajlkn">Twitter</a> for new releases and updates.
+								我相信时代越是复杂，个体的记录就越是重要。
 							</p>
 						</article>
 
 					<!-- Post -->
 						<article class="box post post-excerpt">
 							<header>
-								<h2><a href="#">Lorem ipsum dolor sit amet</a></h2>
-								<p>Feugiat interdum sed commodo ipsum consequat dolor nullam metus</p>
+								<h2><a href="#">这是一个我还没想好的事情</a></h2>
+								<p>同样的，副标题也不清晰</p>
 							</header>
 							<div class="info">
-								<span class="date"><span class="month">Jul<span>y</span></span> <span class="day">8</span><span class="year">, 2014</span></span>
+								<span class="date"><span class="month">Nov<span>y</span></span> <span class="day">8</span><span class="year">, 2022</span></span>
 								<ul class="stats">
 									<li><a href="#" class="icon fa-comment">16</a></li>
 									<li><a href="#" class="icon fa-heart">32</a></li>
@@ -78,10 +74,7 @@
 							</div>
 							<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
 							<p>
-								Quisque vel sapien sit amet tellus elementum ultricies. Nunc vel orci turpis. Donec id malesuada metus.
-								Nunc nulla velit, fermentum quis interdum quis, tate etiam commodo lorem ipsum dolor sit amet dolore.
-								Quisque vel sapien sit amet tellus elementum ultricies. Nunc vel orci turpis. Donec id malesuada metus.
-								Nunc nulla velit, fermentum quis interdum quis, convallis eu sapien. Integer sed ipsum ante.
+								哪一天有货了再更新.
 							</p>
 						</article>
 
@@ -111,10 +104,10 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
-							<li class="current"><a href="#">Latest Post</a></li>
-							<li><a href="#">Archives</a></li>
-							<li><a href="#">About Me</a></li>
-							<li><a href="#">Contact Me</a></li>
+							<li class="current"><a href="#">最新发布</a></li>
+							<li><a href="#">档案</a></li>
+							<li><a href="#">关于我的</a></li>
+							<li><a href="#">可联系我</a></li>
 						</ul>
 					</nav>
 
@@ -129,8 +122,7 @@
 					<section class="box text-style1">
 						<div class="inner">
 							<p>
-								<strong>Striped:</strong> A free and fully responsive HTML5 site
-								template designed by <a href="http://twitter.com/ajlkn">AJ</a> for <a href="http://html5up.net/">HTML5 UP</a>
+								<strong>sxz:</strong> 一个真诚的人，前豆瓣账号 <a href="https://www.douban.com/people/157970365/">AJ</a> 现长毛象账号 <a href="https://cn.o3o.ca/web/@noliforas"></a>
 							</p>
 						</div>
 					</section>
@@ -165,7 +157,7 @@
 					<section class="box calendar">
 						<div class="inner">
 							<table>
-								<caption>July 2014</caption>
+								<caption>July 2022</caption>
 								<thead>
 									<tr>
 										<th scope="col" title="Monday">M</th>
